<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--  语言选择器  -->
    <TextView
        android:id="@+id/language_select_text_id"
        android:text="选择语言："
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <!-- 控制设置的switch   -->
    <Spinner
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/language_select_text_id"
        android:id="@+id/language_change_spinner"
        android:layout_marginBottom="20dp"
        android:entries="@array/languageArray"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <!--  是否需要鉴伪验证  -->
    <CheckBox
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/language_select_text_id"
        android:id="@+id/is_close_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_hint_ocr_icon" />
    <!--  显示token的  -->
    <CheckBox
        android:id="@+id/is_need_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/language_select_text_id"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="是否检测防伪告警" />

    <View
        android:id="@+id/line1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/is_need_verify"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <!--  启动按钮  -->
    <EditText
        android:layout_marginTop="20dp"
        android:layout_below="@+id/line1"
        android:id="@+id/test_token_info_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/is_token_hint"
        android:textSize="13sp"/>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/test_token_info_et"
        android:id="@+id/get_token_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_token" />

    <!--  是否需要鉴伪验证  -->
    <Button
        android:id="@+id/set_token_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test_token_info_et"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="设置Token" />

    <Button
        android:id="@+id/start_ekyc_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        android:text="@string/start_ekyc" />
    <View
        android:id="@+id/line2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/set_token_btn"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <!--  启动按钮  -->
    <EditText
        android:layout_below="@+id/line2"
        android:id="@+id/is_debug_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/is_debug_hint"
        android:textSize="13sp"/>
</RelativeLayout>